REGRESSION(r93902): Can't open external links on gmail https://bugs.webkit.org/show_bug.cgi?id=67234 <rdar://problem/10053636>

Reviewed by Alexey Proskuryakov.

* Shared/cf/ArgumentCodersCF.cpp:
(CoreIPC::decode):
If we encounter an empty URL string, create an empty url by using NSURL, just
like we do in WebCore when converting an empty KURL to an NSURL.

* WebKit2.xcodeproj/project.pbxproj:
Compile ArgumentCodersCF.cpp as Objective-C++ for now.


Canonical link: https://commits.webkit.org/83160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94246 268f45cc-cd09-0410-ab3c-d52691b4dbfc